empaquetando el proyecto con parcel

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "parcel",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "proyecto consumiendo API Fake de platzi y empaquetado con Parcel",
+  "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel serve --port 8080 src/index.hmtl",
+    "build": "parcel build src/index.html --public-url ./"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.9.1"
-  }
+    "parcel": "^2.9.1",
+    "posthtml-include": "^1.7.4"
+  },
+  "main": "index.js"
 }
