--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://creativoo.github.io/proyecto-parcel",
   "name": "parcel",
   "version": "1.0.0",
   "description": "proyecto consumiendo API Fake de platzi y empaquetado con Parcel",
@@ -6,6 +7,7 @@
   "scripts": {
     "start": "parcel serve --port 8080 src/index.html",
     "build": "parcel build src/index.html --public-url ./",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
